# library-api

./: README.md  docker-compose.yml  init.sql  pyproject.toml
api/: Dockerfile  dbmodule.py  main.py  middlewares.py  requirements.txt  schemas.py  utils.py
api/modules/: dbmodule.py  repositories.py  schemas.py
api/routers/: books.py  users.py
tests/: test_main.py
