[project]
name = "library-api"
version = "0.1.0"
description = "This project provieds simple API for library management system using FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "psycopg2>=2.9.10",
    "pytest>=8.4.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
